--- a/cSharp101/cSharp101.csproj
+++ b/cSharp101/cSharp101.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Models\Degiskenler.cs" />
     <Compile Include="Models\Merhaba.cs" />
+    <Compile Include="Models\Operatorler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
