--- a/cSharp101/cSharp101.csproj
+++ b/cSharp101/cSharp101.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Models\SwitchCase.cs" />
     <Compile Include="Models\TipDonusumleri.cs" />
     <Compile Include="Models\TryCacth.cs" />
+    <Compile Include="Models\WhileForeach.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
