--- a/cSharp101/cSharp101.csproj
+++ b/cSharp101/cSharp101.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Models\IfElse.cs" />
     <Compile Include="Models\Merhaba.cs" />
     <Compile Include="Models\Metotlar.cs" />
+    <Compile Include="Models\MetotOverloading.cs" />
     <Compile Include="Models\Operatorler.cs" />
     <Compile Include="Models\SwitchCase.cs" />
     <Compile Include="Models\TipDonusumleri.cs" />
